@@ -1,3 +1,7 @@
+Sun Apr 12 14:53:23 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
+
+	* lib/rubygems/test_case.rb: fixed json load error for rubygems tests.
+
 Sun Apr 12 14:13:28 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* gc.c: Document require name for ObjectSpace methods.
